# svg_with_tests

./: CMakeLists.txt
src/: CMakeLists.txt
src/program/: CMakeLists.txt  main.cpp
src/svg/: CMakeLists.txt  svg.cpp
src/svg/include/: svg.h
tests/: CMakeLists.txt  svg_test.cpp
